#12 bug fixed latest message content not showing in contactlist and some ui changes

--- a/message/advanced/css/app/mck-sidebox-1.0.css
+++ b/message/advanced/css/app/mck-sidebox-1.0.css
@@ -4,8 +4,6 @@
     Author     : devashish
 */
 
-
-
 .mck-sidebox .mck-row {
     margin-right: -15px;
     margin-left: -15px;
@@ -800,23 +798,50 @@
     display: inline-block;
     max-width: 80%;
     min-height: 20px;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+    box-shadow: 0 1px 2px rgba(0,0,0,.15);
+}
+
+.mck-cont-msg-wrapper img, .mck-file-text .file-name img {
+    width:18px;
+    height: 18px;
+    vertical-align: middle;
+}
+
+.mck-icon-camera {
+    opacity: 0.6;
+}
+
+.mck-cont-name strong {
+    vertical-align: middle;
+}
+
+.mck-ol-icon {
+    width: 12px;
+    height: 12px;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 110px;
+    background-color: green;
+}
+
+.mck-ol-status.vis {
+    display: inline-block !important;
 }
 
 .mck-msg-text {
     word-wrap: break-word;
-    color: rgba(255,255,255,0.87);
 }
 
 .msg-left {
     position: relative;
     margin-left: 15px !important;
-    color: rgba(255,255,255,0.87);
-    background-color: #ffc107;
+    color: #333;
+    background-color: #dcf8c6;
     border: 0;
     float: left !important;
 
 }
-
 
 .msg-right {
     position: relative;
@@ -826,11 +851,15 @@
     background-color: #2196f3;
 }
 
-.msg-left a , .msg-right a {
+.msg-right a {
     color:#fff;
     text-decoration:underline;
 }
 
+.msg-left a  {
+    color:#333;
+    text-decoration:underline;
+}
 
 .msg-right a:hover, .msg-left a:hover {
     color: rgb(218, 85, 47);
@@ -868,9 +897,9 @@
     pointer-events: none;
 }
 
-.mag-left:after {
+.msg-left:after {
     border-color: transparent;
-    border-right-color:  #ffc107;
+    border-right-color:  #dcf8c6;
     border-width: 11px;
 }
 
@@ -883,7 +912,7 @@
 
 .msg-left:before {
     border-color: transparent;
-    border-right-color:  #ffc107;
+    border-right-color:  #ddd;
     border-width: 12px;
 }
 
@@ -955,7 +984,7 @@
     position: relative;
 }
 
-#mck-contact-list .mck-alpha-contact-image {
+.mck-contact-list .mck-alpha-contact-image {
     border-radius: 110px;
 }
 
@@ -1257,7 +1286,7 @@
     display: table-cell;
 }
 
-.mck-add-new	    {
+.mck-test-center {
     text-align: center;
 }
 
@@ -1339,8 +1368,14 @@
     .blk-lg-9 {
         width: 75%;
     }
-
     .blk-lg-12 {
         width: 100%;
     }
+
+    .mck-search-list .mck-cont-name {
+        width: 100%;
+        font-size: 15px;
+        line-height: 1.5;
+    }
+
 }
